.. _dataclasses-release-notes:

Release Notes
=============

trunk
-----

* Removed cached members of I3Position.  Non-cartesian coords are calculated on
  the fly.  A tradeoff of CPU for a reduced memory footprint, which we believe
  is worth it. (r179215)
* Implemented pybinding for I3Particle::Clone (r179198)
* Extended the `I3Geometry` class to include new members for scintillators and
  radio antennas (`I3IceActGeo`,`I3ScintGeo` and `I3AntennaGeo`). Indexed by their respective
  keys `IceActKey`,`ScintKey` and `AntennaKey`.
* `I3Geometry` bumped to version 2.
* Included fft package that uses FFTW to perfom Fourier transforms for the
  analysis of radio emission. New class, `FFTDataContainer` and helper tools
  for the caluation of Hilbert envelopes and interfacing with FFTW.
* New classes and maps for holding antenna waveforms, electric fields, and their
  respective FFTs. `I3AntennaWaveform`, `I3AntennaChannel`, and `I3AntennaDataMap`.
* New class, `I3ComplexVector` which closely follows that of `I3Position` but has
  complex amplitudes.
* New classes and maps for holding IceAct data I3IceActWaveformMap, I3IceActRecoPulseMap and I3IceActTriggerMap, 

Feb. 5, 2020 Alex Olivas (aolivas@umd.edu)
-------------------------------------------
Combo Release V00-00-01

* Added binwidth to I3Waveform python bindings.
* Bug fix attempt for ticket #2387.  I3MCTree copy ctor issue.

Dec. 20, 2019 Alex Olivas (aolivas@umd.edu)
-------------------------------------------
Combo Release V00-00-00

* fix bugs in `I3Time` get and set for unix time
* add `__bool__` operateor to `I3Double`, `I3UInt32`, `I3MCTree` and
  `I3FilterResult` in addition to `__nonzero__`. python2 uses `__nonzero__` but
  python3 uses `__bool__`.
* Logic on bool was changed for `I3MCTree` to call false on an empty tree and true
  on a non-empty tree. It had mistakenly been set to the opposite. 
* Add calibration, R&D devices to OMGeo/ModuleGeo

December 11, 2018, Alex Olivas  (olivas@icecube.umd.edu)